package EjercicioVehiculos;

public interface Categoria {

    public double calcularPrecio(int cantPlazas);
}
