package EjercicioVehiculos;

public abstract class Vehiculo {
    protected final double PRECIO_BASE_POR_DIA = 300.0;

    public abstract double alquilar();
}
