package EjercicioVehiculos;

public class Viejo implements  Categoria {
    @Override
    public double calcularPrecio(int cantPlazas) {
        return 0;
    }

}
