@startuml

class Coche{
    +Coche(dias:int, plazas:int, categoria:Categoria)
    +alquilar()
    +calcularPrecio():double
}

class Camion{
    +alquilar()
    +calcularPrecio():double

}
interface Categoria{
    +calularPrecio():double
}
class Viejo{
    +calularPrecio():double
}

class BMW{
    +calularPrecio():double
}
abstract class  Vehiculo {
    #PRECIO_BASE_POR_DIA:double
    {abstract}+calcularPrecio():double
}

Categoria "1" <- "1" Coche: "                  "
Categoria <|.. Viejo
Categoria <|.. BMW
Vehiculo <|-- Coche
Vehiculo <|--  Camion
@enduml